# magentic-ui

./: .dockerignore  .gitignore  API_Documentation.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  Production  README.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  airbnb-surfer.mcp-agent.yaml  build-jaeger.sh  config.yaml  config.yaml.example  demoDoc  docker-compose-jaeger.yml  docker-compose.yml  docker-setup.sh  gemini_config.yaml  package-lock.json  pyproject.toml  start-backend.sh  test_browser.py  test_version.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: checks.yaml  codeql.yml  deploy-github-pages.yml  frontend-checks.yaml  release.yml
.magentic_ui/: alembic.ini  magentic_ui.db
.magentic_ui/alembic/versions/: 4cf32c4c31ac_current_schema.py
SentinelBench/sentinelbench/: .env.example  README.md  generate_jsonl.py  index.html  package-lock.json  package.json  tsconfig.app.json  wrangler.toml
SentinelBench/sentinelbench/src/: App.tsx  index.css  setupTests.ts
baselines/: runledger-demo.json
docker/magentic-ui-browser-docker/: build.sh
docker/magentic-ui-python-env/: build.sh
docs/: TRANSPARENCY_NOTE.md  build-from-source.md  configuration.md  index.html  installation.md  limitations.md  model-hosting-guide.md  troubleshooting.md
experiments/endpoint_configs/: config_template.yaml
experiments/eval/: README.md  analyze_sim_user.py  compare_sentinel_performance.py  explore_results.py  run.py  sample_eval_systems.py
experiments/eval/systems/: __init__.py  llm_system.py  magentic_one_system.py  magentic_ui_sim_user_system.py  magentic_ui_system.py
frontend/: .eslintrc.js  components.json  gatsby-config.ts  gatsby-ssr.tsx  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: agentSettings.ts  auth.ts  client.ts  files.ts  filesystem.ts  health.ts  index.ts  onboarding.ts  sessions.ts  settings.ts
samples/: README.md  hackmd_surfer.py  sample_web_surfer.py
src/magentic_ui/: __init__.py  _ai_client.py  _cli.py  _docker.py  approval.py  approval_guard.py  endpoint_configs.py  magentic_ui_config.py  task_team.py  types.py  version.py
tests/: test_agent_settings_route.py  test_ai_client.py  test_alert_monitor.py  test_anthropic_integration.py  test_anthropic_validation.py  test_anthropic_validation_simple.py  test_auth.py  test_auth_api.py  test_auth_middleware.py  test_bash_observers.py  test_bearcubs_benchmark.py  test_command_policy.py  test_config_file_loader.py  test_continuation_handler.py  test_datamodel_datetime_serialization.py  test_download_handling.py  test_fara_web_surfer.py  test_file_upload_tracking.py  test_filesystem_route.py  test_harness_config_merge.py  test_input_response_files.py  test_live_browser_pool_full.py  test_log_scrub.py  test_magentic_ui_config_serialization.py  test_merge_mcp_agent_configuration.py  test_ollama_integration.py  test_onboarding.py  test_quicksand_browser.py  test_quicksand_sandbox.py  test_run_agent_mode_persistence.py  test_sandbox_bash_only.py  test_sandbox_guest_tools_dir.py  test_save_message_scrub.py  test_start_mounted_folder_metadata.py  test_types.py  test_verifier.py
tests/agents/: test_registry.py
(+518 files in other folders)
